# cookiecutter

./: README.md
python_package/: cookiecutter.json
python_package/hooks/: extensions.py  post_gen_project.py
python_package/{{ cookiecutter.project_slug }}/: .gitignore  Jenkinsfile  Makefile  devbox.json  pyproject.toml
python_package/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
