[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["hyperion1209 <hyperion1209@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "{{ cookiecutter.project_slug }}", from = "src" },
]
include = [
  # The version file is ignored by git so it needs to be explicitly included
  "src/{{ cookiecutter.project_slug }}/_version.py",
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pylint = "^3.3.5"
ipython = "^9.0.2"
isort = "^6.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/{{ cookiecutter.project_slug }}/_version.py"]

[tool.poetry-dynamic-versioning.files."src/{{ cookiecutter.project_slug }}/_version.py"]
persistent-substitution = true
initial-content = """
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[tool.black]
target-version = ["{{ cookiecutter.python_version | replace('.', '') }}"]
line-length = 80

[tool.flake8]
max-line-length = 80

[tool.isort]
profile = "black"
skip = [".venv", ".devbox"]

[tool.mypy]
files = "src"

[tool.pytest.ini_options]
addopts = "-v --junit-xml=pytest.xml --cov=src --cov-report term --cov-report xml"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
